2.AKS/prometheus/prometheus-server-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: prometheus-ing
  namespace: monitoring
spec:
  rules:
  - host: prometheus.nodespringboot.org
    http:
      paths:
      - path: /prometheus-server(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: prometheus-server 
            port:
              number: 80               # 포트를 맞춤 (이름 혹은 숫자)
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: prometheus-server 
            port:
              number: 80
  - host: alert-manager.nodespringboot.org
    http:
      paths:
      - path: /prometheus-alertmanager(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: prometheus-alertmanager 
            port:
              number: 80               # 포트를 맞춤 (이름 혹은 숫자)
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: prometheus-alertmanager 
            port:
              number: 80
